--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@sentry/nextjs": "^10.12.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.16",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.16",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.180.0"
